# Constellation

./: .gitignore  Cargo.toml  LICENSE  README.md  SETUP.md  check_output.txt  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/application/: dto.rs  mod.rs
src-tauri/src/application/services/: item_service.rs  mod.rs  search_service.rs  settings_service.rs  tag_group_service.rs  tag_service.rs  tag_template_service.rs  thumbnail_service.rs  usn_refresh_service.rs
src-tauri/src/commands/: file_monitor.rs  filesystem.rs  items.rs  mod.rs  search.rs  settings.rs  tag_groups.rs  tag_templates.rs  tags.rs  thumbnails.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs  tests.rs
src-tauri/src/domain/: errors.rs  mod.rs
src-tauri/src/domain/entities/: item.rs  mod.rs  search_history.rs  settings.rs  tag.rs  tag_group.rs  tag_template.rs
src-tauri/src/domain/repositories/: item_repository.rs  mod.rs  search_history_repository.rs  settings_repository.rs  tag_group_repository.rs  tag_repository.rs  tag_template_repository.rs
src-tauri/src/domain/search/: ast.rs  error.rs  mod.rs  parser.rs  query.pest
src-tauri/src/domain/value_objects/: color.rs  file_path.rs  mod.rs  tag_value.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/persistence/: cql_executor.rs  mod.rs  schema.rs  sqlite_item_repository.rs  sqlite_search_history_repository.rs  sqlite_search_repository.rs  sqlite_tag_repository.rs  (+3 more)
src-tauri/windows/: hooks.nsh
(+173 files in other folders)
