[package]
name = "constellation"
version = "1.1.1"
description = "A Tauri App"
authors = ["DaLaw2"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "constellation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
deadpool-sqlite = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1.0"
async-trait = "0.1"
pest = "2.7"
pest_derive = "2.7"
opener = "0.7"
deadpool = "0.10"
image = { version = "0.25", default-features = false, features = ["webp", "png"] }
blake3 = "1"
winapi = { version = "0.3", features = ["fileapi", "winbase", "winnt", "shellapi", "winuser"] }
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3.24.0"

